--- a/research/02_prepare_base_model.ipynb
+++ b/research/02_prepare_base_model.ipynb
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
     "        prepare_base_model_config = PrepareBaseModelConfig(\n",
     "            root_dir = Path(config.root_dir),\n",
     "            base_model_path=Path(config.base_model_path),\n",
-    "            uodated_base_model_path = Path(config.updated_base_model_path),\n",
+    "            updated_base_model_path = Path(config.updated_base_model_path),\n",
     "            params_image_size=self.params.IMAGE_SIZE,\n",
     "            params_learning_rate=self.params.LEARNING_RATE,\n",
     "            params_include_top=self.params.INCLUDE_TOP,\n",
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
     "        \n",
     "    def get_base_model(self):\n",
     "        self.model = tf.keras.applications.vgg16. VGG16(\n",
-    "            input_shape=self.params.image_size,\n",
+    "            input_shape=self.config.params_image_size,\n",
     "            weights=self.config.params_weights,\n",
     "            include_top=self.config.params_include_top\n",
     "        )\n",
@@ -164,11 +164,11 @@
     "            for layer in model.layers:\n",
     "                model.trainable = False\n",
     "                \n",
-    "        elif (freeze_till is not None) and (freeze_all > 0:\n",
+    "        elif (freeze_till is not None) and (freeze_all > 0):\n",
     "            for layer in model.layers[:-freeze_till]:\n",
     "                model.trainable = False\n",
     "                \n",
-    "        flatten_in = tf.keras.layers.flatten()(model.output)\n",
+    "        flatten_in = tf.keras.layers.Flatten()(model.output)\n",
     "        prediction = tf.keras.layers.Dense(\n",
     "            units = classes,\n",
     "            activation = \"softmax\"\n",
@@ -188,7 +188,7 @@
     "        return full_model\n",
     "        \n",
     "    def update_base_model(self):\n",
-    "        self.full_model = self.prepare_full_model(\n",
+    "        self.full_model = self._prepare_full_model(\n",
     "            model = self.model,\n",
     "            classes = self.config.params_classes,\n",
     "            freeze_all = True,\n",
@@ -199,8 +199,108 @@
     "        \n",
     "    @staticmethod\n",
     "    def save_model(path: Path, model: tf.keras.Model):\n",
-    "        model.save(path)"
+    "        model.save(path)\n",
+    "        "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2023-11-05 00:04:24,143: INFO: common: yaml file: config/config.yaml loaded successfully]\n",
+      "[2023-11-05 00:04:24,145: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2023-11-05 00:04:24,145: INFO: common: directory: artifacts created successfully]\n",
+      "[2023-11-05 00:04:24,146: INFO: common: directory: artifacts/prepare_base_model created successfully]\n",
+      "[2023-11-05 00:04:24,414: WARNING: saving_utils: Compiled the loaded model, but the compiled metrics have yet to be built. `model.compile_metrics` will be empty until you train or evaluate the model.]\n",
+      "[2023-11-05 00:04:24,487: WARNING: optimizer: At this time, the v2.11+ optimizer `tf.keras.optimizers.SGD` runs slowly on M1/M2 Macs, please use the legacy Keras optimizer instead, located at `tf.keras.optimizers.legacy.SGD`.]\n",
+      "Model: \"model\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " input_4 (InputLayer)        [(None, 224, 224, 3)]     0         \n",
+      "                                                                 \n",
+      " block1_conv1 (Conv2D)       (None, 224, 224, 64)      1792      \n",
+      "                                                                 \n",
+      " block1_conv2 (Conv2D)       (None, 224, 224, 64)      36928     \n",
+      "                                                                 \n",
+      " block1_pool (MaxPooling2D)  (None, 112, 112, 64)      0         \n",
+      "                                                                 \n",
+      " block2_conv1 (Conv2D)       (None, 112, 112, 128)     73856     \n",
+      "                                                                 \n",
+      " block2_conv2 (Conv2D)       (None, 112, 112, 128)     147584    \n",
+      "                                                                 \n",
+      " block2_pool (MaxPooling2D)  (None, 56, 56, 128)       0         \n",
+      "                                                                 \n",
+      " block3_conv1 (Conv2D)       (None, 56, 56, 256)       295168    \n",
+      "                                                                 \n",
+      " block3_conv2 (Conv2D)       (None, 56, 56, 256)       590080    \n",
+      "                                                                 \n",
+      " block3_conv3 (Conv2D)       (None, 56, 56, 256)       590080    \n",
+      "                                                                 \n",
+      " block3_pool (MaxPooling2D)  (None, 28, 28, 256)       0         \n",
+      "                                                                 \n",
+      " block4_conv1 (Conv2D)       (None, 28, 28, 512)       1180160   \n",
+      "                                                                 \n",
+      " block4_conv2 (Conv2D)       (None, 28, 28, 512)       2359808   \n",
+      "                                                                 \n",
+      " block4_conv3 (Conv2D)       (None, 28, 28, 512)       2359808   \n",
+      "                                                                 \n",
+      " block4_pool (MaxPooling2D)  (None, 14, 14, 512)       0         \n",
+      "                                                                 \n",
+      " block5_conv1 (Conv2D)       (None, 14, 14, 512)       2359808   \n",
+      "                                                                 \n",
+      " block5_conv2 (Conv2D)       (None, 14, 14, 512)       2359808   \n",
+      "                                                                 \n",
+      " block5_conv3 (Conv2D)       (None, 14, 14, 512)       2359808   \n",
+      "                                                                 \n",
+      " block5_pool (MaxPooling2D)  (None, 7, 7, 512)         0         \n",
+      "                                                                 \n",
+      " flatten (Flatten)           (None, 25088)             0         \n",
+      "                                                                 \n",
+      " dense (Dense)               (None, 2)                 50178     \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 14764866 (56.32 MB)\n",
+      "Trainable params: 50178 (196.01 KB)\n",
+      "Non-trainable params: 14714688 (56.13 MB)\n",
+      "_________________________________________________________________\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/amitmalhotra/Desktop/Deep Learning Projects/Chicken-Disease-Classification/env/lib/python3.11/site-packages/keras/src/engine/training.py:3079: UserWarning: You are saving your model as an HDF5 file via `model.save()`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')`.\n",
+      "  saving_api.save_model(\n"
+     ]
+    }
+   ],
+   "source": [
+    "import ssl\n",
+    "ssl._create_default_https_context = ssl._create_unverified_context\n",
+    "try:\n",
+    "    config = ConfigurationManager()\n",
+    "    prepare_base_model_config = config.get_prepare_base_model_config()\n",
+    "    prepare_base_model= PrepareBaseModel(config=prepare_base_model_config)\n",
+    "    prepare_base_model.get_base_model()\n",
+    "    prepare_base_model.update_base_model()\n",
+    "    \n",
+    "\n",
+    "except Exception as e:\n",
+    "    raise e"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
